# fetal-head-abnormalities-detection

./: .dockerignore  .gitattributes  .gitignore.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CLEANUP_REPORT.md  DEPLOYMENT.md
notebooks/: 02_data_exploration_preprocessing.ipynb  03_baseline_unet_training.ipynb  04_synthetic_data_generation.ipynb  05_pix2pixHD_training_and_inference.ipynb  06-segementation-ipynb (1).ipynb
notebooks/.ipynb_checkpoints/: 01_organize_dataset-checkpoint.py  02_data_exploration_preprocessing-checkpoint.ipynb  05_pix2pixHD_training_and_inference-checkpoint.ipynb
notebooks/checkpoints/: baseline_unet.pth
notebooks/checkpoints/fetal_pix2pixHD_cpu_test/: loss_log.txt  opt.txt
notebooks/checkpoints/fetal_pix2pixHD_smaller/: loss_log.txt  opt.txt
notebooks/checkpoints/fetal_pix2pixHD_smaller/web/: index.html
notebooks/checkpoints_spade/: model_epoch_1.pth  model_epoch_10.pth  model_epoch_11.pth  model_epoch_2.pth  model_epoch_20.pth  model_epoch_21.pth  model_epoch_30.pth  model_epoch_40.pth  model_epoch_43.pth  model_epoch_44.pth  model_epoch_50.pth
scripts/: check_alignment.py  organize_dataset.py  run_web.sh
src/fhad/: __init__.py  config.py  data.py  evaluate.py  inference.py  metrics.py  model.py  predict.py  train.py
src/fhad/web/: app.py
src/fhad/web/static/: style.css
src/fhad/web/templates/: index.html
tests/: test_data.py  test_metrics.py  test_train_smoke.py
